frontend/src/index.css
@import "tailwindcss";
@config "../tailwind.config.js";

:root {
  --color-secondary-fixed: #d5e3fd;
  --color-on-primary-fixed: #131b2e;
  --color-tertiary-fixed: #6ffbbe;
  --color-surface-bright: #f8f9ff;
  --color-primary-fixed: #dae2fd;
  --color-surface-container-highest: #d3e4fe;
  --color-inverse-on-surface: #eaf1ff;
  --color-on-secondary-fixed-variant: #3a485c;
  --color-tertiary: #000000;
  --color-surface-variant: #d3e4fe;
  --color-on-primary: #ffffff;
  --color-on-tertiary-fixed-variant: #005236;
  --color-on-background: #0b1c30;
  --color-on-error: #ffffff;
  --color-on-primary-container: #7c839b;
  --color-primary: #000000;
  --color-secondary-fixed-dim: #b9c7e0;
  --color-background: #f8f9ff;
  --color-surface-tint: #565e74;
  --color-error: #ba1a1a;
  --color-primary-container: #131b2e;
  --color-inverse-primary: #bec6e0;
  --color-outline: #76777d;
  --color-surface-container-lowest: #ffffff;
  --color-on-surface: #0b1c30;
  --color-on-secondary-fixed: #0d1c2f;
  --color-on-tertiary-container: #009668;
  --color-on-surface-variant: #45464d;
  --color-surface-dim: #cbdbf5;
  --color-inverse-surface: #213145;
  --color-primary-fixed-dim: #bec6e0;
  --color-surface: #f8f9ff;
  --color-tertiary-fixed-dim: #4edea3;
  --color-on-secondary: #ffffff;
  --color-error-container: #ffdad6;
  --color-on-error-container: #93000a;
  --color-secondary-container: #d5e3fd;
  --color-surface-container: #e5eeff;
  --color-surface-container-low: #eff4ff;
  --color-surface-container-high: #dce9ff;
  --color-on-tertiary-fixed: #002113;
  --color-tertiary-container: #002113;
  --color-on-tertiary: #ffffff;
  --color-on-primary-fixed-variant: #3f465c;
  --color-on-secondary-container: #57657b;
  --color-outline-variant: #c6c6cd;
  --color-secondary: #515f74;
}

.dark {
  --color-surface: #0b1c30;
  --color-on-surface: #eaf1ff;
  --color-surface-container: #13243a;
  --color-surface-container-low: #0d1c2f;
  --color-surface-container-high: #1a2b42;
  --color-surface-container-lowest: #051121;
  --color-outline-variant: #3a485c;
  --color-on-surface-variant: #b9c7e0;
  --color-background: #051121;
}

@layer base {
  body {
    @apply font-body bg-surface text-on-surface selection:bg-tertiary-fixed-dim selection:text-on-tertiary-fixed;
  }
}

@layer utilities {
  .material-symbols-outlined {
    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;
  }
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
}

html.dark {
  color-scheme: dark;
}

